--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,8 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_details">DetailsActivity</string>
+    <string name="brandlabel">"Brand : "</string>
+    <string name="modellabel">"Model : "</string>
+
 
 </resources>
