added more details/changed temp image

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,9 @@
     <string name="title_activity_details">DetailsActivity</string>
     <string name="brandlabel">"Brand : "</string>
     <string name="modellabel">"Model : "</string>
+    <string name="enginelabel">"Engine : "</string>
+    <string name="sixtyTimelabel">"0-60 time : "</string>
+    <string name="topSpeedlabel">"Top Speed : "</string>
 
 
 </resources>
